<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/green">
   <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_shop"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/createShopBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:text="@string/creat_shop"
        android:layout_marginTop="32dp"
        android:gravity="center"/>
    <Button
        android:id="@+id/exitBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:text="@string/exit"
        android:layout_marginTop="32dp"
        android:gravity="center"/>

</LinearLayout>